# msketch

./: .gitignore  TestCSolve.ipynb  lsolvetest.sh  readme.md
analysis/: Aria Benchmark.ipynb  Cascades Benchmark.ipynb  Cheby Precision Loss.ipynb  Cross Benchmark.ipynb  DiscreteOutlier Micro Tests [Paper].ipynb  Druid Plot.ipynb  Lesion Results.ipynb  Log Lesion.ipynb  Merge Benchmark.ipynb  Moments Benchmark.ipynb  Outlier Benchmark.ipynb  Parallel Merge Benchmark.ipynb  Perf Micro Plots.ipynb  Point Benchmark.ipynb  Precision Benchmark.ipynb  Sliding Windows Benchmark.ipynb  SysML Paper.ipynb
benchmarks/: csketch.py  csolver.py
cbenchmarks/: main.py
cpplib/: CMakeLists.txt
cpplib/include/: catch.hh  library.h
cpplib/src/: Chebyshev.cpp  Chebyshev.h  library.cpp  main.cpp
cpplib/test/: test.cpp  test_cheby.cpp  test_simple.cpp
cvx_estimator/: milan.py
cvxestimate/: cvx_estimator.py  cvxbench.py  estimator.py  exponential.py  gauss_estimator.py  hepmass.py  lesion_study.py  milan.py
javamsketch/: accBench.sh  cascadeBench.sh  discretebench.sh  lesionSolve.sh  loglesion.sh  mRuntimeBench.sh  mergeBench.sh  outlierbench.sh  parallelMergeBench.sh  pom.xml  precisionBench.sh  precisionMergeBench.sh  readme.md  runmain.sh  slidingWindowBench.sh  yahooCreator.sh
lsolver/: basis.py  cdf.py  main.py  plot.py  solver.py
math/: Bounds.ipynb  Chebyshev.ipynb  MomentConversion.ipynb  Quadrature.ipynb  combined.lyx  notes.lyx
mlib/: CMakeLists.txt  mlib.c  mlib.h  mopt.c  util.h
mscript/mlib/: CMakeLists.txt  main.c  mlib.c  mlib.h  mopt.h  rtest.c
(+369 files in other folders)
